deploy/modules/asg_instances/main.tf
# You can have multiple ECS clusters in the same account with different resources.
# Therefore all resources created here have the name containing the name of the:
# environment, cluster name en the instance_group name.
# That is also the reason why ecs_instances is a seperate module and not everything is created here.

resource "aws_security_group" "instance" {
  name        = "${var.environment}-${var.instance_group}"
  description = "Used in ${var.environment}"
  vpc_id      = "${var.vpc_id}"

  tags  = {
    Environment   = "${var.environment}"
    Cluster       = "${var.environment}"
    InstanceGroup = "${var.instance_group}"
  }
}

# We separate the rules from the aws_security_group because then we can manipulate the 
# aws_security_group outside of this module
resource "aws_security_group_rule" "outbound_internet_access" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.instance.id}"
}

resource "aws_security_group_rule" "inbound_internet_access" {
  type              = "ingress"
  from_port         = 8881
  to_port           = 8881
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.instance.id}"
}

resource "aws_security_group_rule" "inbound_ssh_access" {
  type              = "ingress"
  description       = "allow ssh access from bastion"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  source_security_group_id = var.bastion_sg
  security_group_id = "${aws_security_group.instance.id}"
}
resource "aws_lb_target_group" "default" {
  count	   = length(var.target_groups) == 0 ? 1 : 0
  name     = "${var.environment}-${var.instance_group}-tg"
  port     = "${var.target_group_port}"
  health_check  {
  path     = "${var.health_check_path}"
  enabled = true
  interval = 30
  timeout  = 5
  healthy_threshold = 2
  unhealthy_threshold = 2
  matcher = "200,202,302"
  port = "${var.health_check_port}"
  protocol = "${var.health_check_protocol}"
  }
  vpc_id   = "${var.vpc_id}"
}

# Default disk size for Docker is 22 gig, see http://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-optimized_AMI.html
resource "aws_launch_configuration" "launch" {
  name_prefix          = "${var.environment}-${var.instance_group}"
  image_id             = "${var.aws_ami}"
  instance_type        = "${var.instance_type}"
  security_groups      = ["${aws_security_group.instance.id}"]
  user_data            = "${data.template_file.user_data.rendered}"
  iam_instance_profile = "${var.iam_instance_profile_id}"
  key_name             = "${var.key_name}"
  root_block_device  {
	volume_size = "${var.root_disk_size}"
        volume_type = "${var.root_disk_type}"
        delete_on_termination = true
  }
  # aws_launch_configuration can not be modified.
  # Therefore we use create_before_destroy so that a new modified aws_launch_configuration can be created 
  # before the old one get's destroyed. That's why we use name_prefix instead of name.
  lifecycle {
    create_before_destroy = true
  }
}

# Instances are scaled across availability zones http://docs.aws.amazon.com/autoscaling/latest/userguide/auto-scaling-benefits.html 
resource "aws_autoscaling_group" "asg_with_new_tg"  {
  count	               = length(var.target_groups) == 0 ? 1 : 0
  name                 = "${var.environment}-${var.instance_group}"
  max_size             = "${var.max_size}"
  min_size             = "${var.min_size}"
  health_check_type         = "ELB"
  desired_capacity     = "${var.desired_capacity}"
  force_delete         = true
  launch_configuration = "${aws_launch_configuration.launch.id}"
  vpc_zone_identifier  = "${var.private_subnet_ids}"
  target_group_arns = [aws_lb_target_group.default[0].id]
  termination_policies  =  "${var.termination_policies}"
  tag {
    key                 = "Name"
    value               = "${var.environment}-${var.instance_group}"
    propagate_at_launch = "true"
  }

  tag {
    key                 = "Environment"
    value               = "${var.environment}"
    propagate_at_launch = "true"
  }

  tag {
    key                 = "InstanceGroup"
    value               = "${var.instance_group}"
    propagate_at_launch = "true"
  }

  # EC2 instances require internet connectivity to boot. Thus EC2 instances must not start before NAT is available.
  # For info why see description in the network module.

}


resource "aws_autoscaling_group" "asg_with_existing_tg" {
  count                 = length(var.target_groups) > 0 ? 1 : 0 
  name                  = "${var.environment}-${var.instance_group}"
  max_size              = "${var.max_size}"
  min_size              = "${var.min_size}"
  health_check_type         = "ELB"
  desired_capacity      = "${var.desired_capacity}"
  force_delete          = true
  launch_configuration  = "${aws_launch_configuration.launch.id}"
  vpc_zone_identifier   = "${var.private_subnet_ids}"
  target_group_arns     = "${var.target_groups}"
  termination_policies  =  "${var.termination_policies}"
  tag {
    key                 = "Name"
    value               = "${var.environment}-${var.instance_group}"
    propagate_at_launch = "true"
  }

  tag {
    key                 = "Environment"
    value               = "${var.environment}"
    propagate_at_launch = "true"
  }

  tag {
    key                 = "InstanceGroup"
    value               = "${var.instance_group}"
    propagate_at_launch = "true"
  }

  # EC2 instances require internet connectivity to boot. Thus EC2 instances must not start before NAT is available.
  # For info why see description in the network module.

}

data "template_file" "user_data" {
  template = "${file("${path.module}/templates/user_data.sh")}"

  vars = {
    ecs_config        = "${var.ecs_config}"
    ecs_logging       = "${var.ecs_logging}"
    env_name          = "${var.environment}"
    custom_userdata   = "${var.custom_userdata}"
    cloudwatch_prefix = "${var.cloudwatch_prefix}"
  }
}
